--- a/public/index.html
+++ b/public/index.html
@@ -3,69 +3,127 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Portofolio Pribadi</title>
+  <title>Afiyatna | Portofolio</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    body { font-family: 'Inter', sans-serif; }
+    .btn-primary { @apply px-6 py-2 bg-purple-600 text-white rounded-full shadow hover:bg-purple-700 transition; }
+  </style>
 </head>
-<body class="bg-white dark:bg-gray-900 text-gray-900 dark:text-white transition-colors duration-300">
+<body class="bg-white text-gray-900">
   <!-- Navbar -->
-  <nav class="fixed w-full bg-white dark:bg-gray-900 shadow z-50">
+  <nav class="fixed w-full bg-white shadow z-50">
     <div class="container mx-auto flex justify-between items-center py-4 px-6">
-      <div class="font-bold text-xl">Portofolio</div>
+      <div class="font-bold text-2xl text-purple-700">afiyatna</div>
       <div class="space-x-6 hidden md:block">
-        <a href="#home" class="hover:text-blue-500">Beranda</a>
-        <a href="#about" class="hover:text-blue-500">Tentang</a>
-        <a href="#projects" class="hover:text-blue-500">Projek</a>
-        <a href="#contact" class="hover:text-blue-500">Kontak</a>
+        <a href="#home" class="hover:text-purple-600 font-medium">Home</a>
+        <a href="#about" class="hover:text-purple-600 font-medium">About</a>
+        <a href="#projects" class="hover:text-purple-600 font-medium">Projects</a>
+        <a href="#articles" class="hover:text-purple-600 font-medium">Article</a>
+        <a href="#skills" class="hover:text-purple-600 font-medium">Skills</a>
+        <a href="#contact" class="hover:text-purple-600 font-medium">Contact</a>
       </div>
-      <button id="dark-toggle" class="ml-4 p-2 rounded bg-gray-200 dark:bg-gray-700">🌙</button>
-      <button id="menu-toggle" class="md:hidden ml-4 p-2 rounded bg-gray-200 dark:bg-gray-700">☰</button>
+      <button id="menu-toggle" class="md:hidden ml-4 p-2 rounded bg-gray-200">☰</button>
     </div>
     <div id="mobile-menu" class="md:hidden hidden px-6 pb-4">
-      <a href="#home" class="block py-2">Beranda</a>
-      <a href="#about" class="block py-2">Tentang</a>
-      <a href="#projects" class="block py-2">Projek</a>
-      <a href="#contact" class="block py-2">Kontak</a>
+      <a href="#home" class="block py-2">Home</a>
+      <a href="#about" class="block py-2">About</a>
+      <a href="#projects" class="block py-2">Projects</a>
+      <a href="#articles" class="block py-2">Article</a>
+      <a href="#skills" class="block py-2">Skills</a>
+      <a href="#contact" class="block py-2">Contact</a>
     </div>
   </nav>
 
-  <!-- Beranda -->
-  <section id="home" class="min-h-screen flex flex-col items-center justify-center pt-24" data-aos="fade-up">
-    <img src="assets/profile.jpg" alt="Foto Profil" class="w-32 h-32 rounded-full shadow mb-4">
-    <h1 class="text-3xl md:text-5xl font-bold mb-2">Afiyatna N. Fauzan</h1>
-    <p class="text-lg md:text-2xl text-blue-500 mb-4">Web Developer</p>
-    <a href="#contact" class="mt-4 px-6 py-2 bg-blue-500 text-white rounded shadow hover:bg-blue-600 transition">Hubungi Saya</a>
-  </section>
-
-  <!-- Tentang Saya -->
-  <section id="about" class="py-16 container mx-auto px-6" data-aos="fade-up">
-    <h2 class="text-2xl font-bold mb-4">Tentang Saya</h2>
-    <p class="text-lg">Saya adalah seorang web developer dengan keahlian di bidang JavaScript, HTML, CSS, dan integrasi API. Saya suka membangun aplikasi web yang modern, responsif, dan mudah digunakan.</p>
-  </section>
-
-  <!-- Projek -->
-  <section id="projects" class="py-16 bg-gray-100 dark:bg-gray-800" data-aos="fade-up">
-    <div class="container mx-auto px-6">
-      <h2 class="text-2xl font-bold mb-8">Projek</h2>
-      <div id="projects-list" class="grid md:grid-cols-2 gap-8"></div>
+  <!-- Header / Home -->
+  <section id="home" class="pt-32 pb-16 container mx-auto flex flex-col md:flex-row items-center justify-between gap-8">
+    <div class="flex-1">
+      <p class="text-lg mb-2">Halo 👋, I'm</p>
+      <h1 class="text-4xl md:text-5xl font-bold mb-2">Afiyatna</h1>
+      <p class="text-xl text-purple-600 font-semibold mb-2">Semua tergantung mindset</p>
+      <p class="mb-6 text-gray-700">Web Developer</p>
+      <a href="#contact" class="btn-primary">Contact Me</a>
+    </div>
+    <div class="flex-1 flex flex-col items-center relative">
+      <img src="assets/profile.jpg" alt="Foto Profil" class="w-56 h-56 object-cover rounded-2xl shadow-xl mb-4">
+      <div class="absolute top-4 left-0 bg-white rounded-full shadow px-4 py-2 flex items-center gap-2 text-sm font-medium"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" class="w-5 h-5"> LinkedIn</div>
+      <div class="absolute bottom-4 right-0 bg-white rounded-full shadow px-4 py-2 flex items-center gap-2 text-sm font-medium"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" class="w-5 h-5"> GitHub</div>
     </div>
   </section>
 
-  <!-- Kontak -->
-  <section id="contact" class="py-16 container mx-auto px-6" data-aos="fade-up">
-    <h2 class="text-2xl font-bold mb-4">Kontak</h2>
-    <form id="contact-form" class="max-w-lg mx-auto space-y-4 bg-white dark:bg-gray-700 p-6 rounded shadow">
-      <input type="text" name="Nama" placeholder="Nama" required class="w-full p-2 rounded border border-gray-300 dark:bg-gray-800 dark:border-gray-600" />
-      <input type="email" name="Email" placeholder="Email" required class="w-full p-2 rounded border border-gray-300 dark:bg-gray-800 dark:border-gray-600" />
-      <textarea name="Pesan" placeholder="Pesan" required class="w-full p-2 rounded border border-gray-300 dark:bg-gray-800 dark:border-gray-600"></textarea>
-      <button type="submit" class="w-full py-2 bg-blue-500 text-white rounded hover:bg-blue-600 transition">Kirim</button>
-      <div id="form-message" class="text-center mt-2"></div>
-    </form>
+  <!-- Projects Section -->
+  <section id="projects" class="py-16 bg-gray-50">
+    <div class="container mx-auto px-4">
+      <h2 class="text-2xl font-bold mb-8">Projects</h2>
+      <div class="swiper projects-swiper">
+        <div class="swiper-wrapper" id="projects-list">
+          <!-- Dummy Project Cards atau data dari script.js -->
+        </div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+      </div>
+    </div>
   </section>
 
-  <footer class="text-center py-6 text-gray-500 dark:text-gray-400">&copy; 2024 Nama Anda</footer>
+  <!-- Articles Section -->
+  <section id="articles" class="py-16">
+    <div class="container mx-auto px-4">
+      <h2 class="text-2xl font-bold mb-8">Articles</h2>
+      <div class="swiper articles-swiper">
+        <div class="swiper-wrapper">
+          <!-- Dummy Article Cards -->
+          <div class="swiper-slide"><div class="bg-white rounded-xl shadow p-4"><img src="https://placehold.co/400x200/8b5cf6/fff?text=Laravel+Deploy" class="rounded mb-2"><h3 class="font-bold text-lg mb-1">Step-by-Step Guide: Deploying and Installing Laravel 10 on Cpanel</h3></div></div>
+          <div class="swiper-slide"><div class="bg-white rounded-xl shadow p-4"><img src="https://placehold.co/400x200/8b5cf6/fff?text=VSCode+SQL" class="rounded mb-2"><h3 class="font-bold text-lg mb-1">How to use Visual Studio Code as SQL Client Tools</h3></div></div>
+          <div class="swiper-slide"><div class="bg-white rounded-xl shadow p-4"><img src="https://placehold.co/400x200/8b5cf6/fff?text=RedHat+Linux" class="rounded mb-2"><h3 class="font-bold text-lg mb-1">How To Install Laravel 9 on RHEL 7 or CentOS 7</h3></div></div>
+          <div class="swiper-slide"><div class="bg-white rounded-xl shadow p-4"><img src="https://placehold.co/400x200/8b5cf6/fff?text=MySQL" class="rounded mb-2"><h3 class="font-bold text-lg mb-1">Connect With MySQL On Other Server [RHEL/CentOS 7]</h3></div></div>
+        </div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+      </div>
+    </div>
+  </section>
 
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <!-- Contact Me Section -->
+  <section id="contact" class="py-16 bg-gray-50">
+    <div class="container mx-auto px-4 flex flex-col md:flex-row gap-8">
+      <form id="contact-form" class="flex-1 bg-white rounded-xl shadow p-8 space-y-4">
+        <h2 class="text-2xl font-bold mb-4">Contact Me</h2>
+        <input type="text" name="Nama" placeholder="Name" required class="w-full p-3 rounded border border-gray-300" />
+        <input type="email" name="Email" placeholder="Email" required class="w-full p-3 rounded border border-gray-300" />
+        <textarea name="Pesan" placeholder="Message" required class="w-full p-3 rounded border border-gray-300"></textarea>
+        <button type="submit" class="w-full py-3 bg-purple-600 text-white rounded-full font-semibold hover:bg-purple-700 transition">Request Now</button>
+        <div id="form-message" class="text-center mt-2"></div>
+      </form>
+      <div class="flex-1 bg-white rounded-xl shadow p-8 flex flex-col items-start justify-center">
+        <h3 class="text-xl font-bold mb-4">Connect Me</h3>
+        <a href="#" class="flex items-center gap-2 mb-2 text-gray-700 hover:text-purple-600"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" class="w-6 h-6"> LinkedIn</a>
+        <a href="#" class="flex items-center gap-2 mb-2 text-gray-700 hover:text-purple-600"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/twitter/twitter-original.svg" class="w-6 h-6"> Twitter</a>
+        <a href="#" class="flex items-center gap-2 mb-2 text-gray-700 hover:text-purple-600"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/instagram/instagram-original.svg" class="w-6 h-6"> Instagram</a>
+      </div>
+    </div>
+  </section>
+
+  <footer class="text-center py-6 text-gray-500">&copy; 2024 Afiyatna</footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+  <script>
+    // Swiper for Projects
+    new Swiper('.projects-swiper', {
+      slidesPerView: 1,
+      spaceBetween: 24,
+      navigation: { nextEl: '.swiper-button-next', prevEl: '.swiper-button-prev' },
+      breakpoints: { 640: { slidesPerView: 2 }, 1024: { slidesPerView: 3 } }
+    });
+    // Swiper for Articles
+    new Swiper('.articles-swiper', {
+      slidesPerView: 1,
+      spaceBetween: 24,
+      navigation: { nextEl: '.swiper-button-next', prevEl: '.swiper-button-prev' },
+      breakpoints: { 640: { slidesPerView: 2 }, 1024: { slidesPerView: 3 } }
+    });
+  </script>
   <script src="script.js"></script>
 </body>
 </html> 
