--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,14 @@
     </div>
   </section>
 
+  <!-- About Section -->
+  <section id="about" class="py-16">
+    <div class="container mx-auto px-4">
+      <h2 class="text-2xl font-bold mb-8">About</h2>
+      <div id="about-content" class="bg-white rounded-xl shadow p-8"></div>
+    </div>
+  </section>
+
   <!-- Projects Section -->
   <section id="projects" class="py-16 bg-gray-50">
     <div class="container mx-auto px-4">
@@ -72,16 +80,20 @@
     <div class="container mx-auto px-4">
       <h2 class="text-2xl font-bold mb-8">Articles</h2>
       <div class="swiper articles-swiper">
-        <div class="swiper-wrapper">
-          <!-- Dummy Article Cards -->
-          <div class="swiper-slide"><div class="bg-white rounded-xl shadow p-4"><img src="https://placehold.co/400x200/8b5cf6/fff?text=Laravel+Deploy" class="rounded mb-2"><h3 class="font-bold text-lg mb-1">Step-by-Step Guide: Deploying and Installing Laravel 10 on Cpanel</h3></div></div>
-          <div class="swiper-slide"><div class="bg-white rounded-xl shadow p-4"><img src="https://placehold.co/400x200/8b5cf6/fff?text=VSCode+SQL" class="rounded mb-2"><h3 class="font-bold text-lg mb-1">How to use Visual Studio Code as SQL Client Tools</h3></div></div>
-          <div class="swiper-slide"><div class="bg-white rounded-xl shadow p-4"><img src="https://placehold.co/400x200/8b5cf6/fff?text=RedHat+Linux" class="rounded mb-2"><h3 class="font-bold text-lg mb-1">How To Install Laravel 9 on RHEL 7 or CentOS 7</h3></div></div>
-          <div class="swiper-slide"><div class="bg-white rounded-xl shadow p-4"><img src="https://placehold.co/400x200/8b5cf6/fff?text=MySQL" class="rounded mb-2"><h3 class="font-bold text-lg mb-1">Connect With MySQL On Other Server [RHEL/CentOS 7]</h3></div></div>
+        <div class="swiper-wrapper" id="articles-list">
+          <!-- Data dari script.js -->
         </div>
         <div class="swiper-button-next"></div>
         <div class="swiper-button-prev"></div>
       </div>
+    </div>
+  </section>
+
+  <!-- Skills Section -->
+  <section id="skills" class="py-16 bg-gray-50">
+    <div class="container mx-auto px-4">
+      <h2 class="text-2xl font-bold mb-8">Skills</h2>
+      <div id="skills-list" class="grid grid-cols-2 md:grid-cols-4 gap-6"></div>
     </div>
   </section>
 
