--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
       <a href="#home" class="block py-2">Home</a>
       <a href="#about" class="block py-2">About</a>
       <a href="#projects" class="block py-2">Projects</a>
-      <a href="#articles" class="block py-2">Article</a>
+      <a href="#articles" class="block py-2">articles</a>
       <a href="#skills" class="block py-2">Skills</a>
       <a href="#contact" class="block py-2">Contact</a>
     </div>
