--- a/public/index.html
+++ b/public/index.html
@@ -6,17 +6,19 @@
   <title>Afiyatna | Portofolio</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+  <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body { font-family: 'Inter', sans-serif; }
     .btn-primary { @apply px-6 py-2 bg-purple-600 text-white rounded-full shadow hover:bg-purple-700 transition; }
+    .dark .btn-primary { @apply bg-gray-800 text-white hover:bg-gray-900; }
   </style>
 </head>
-<body class="bg-white text-gray-900">
+<body class="bg-white text-gray-900 dark:bg-gray-900 dark:text-white transition-colors duration-300">
   <!-- Navbar -->
-  <nav class="fixed w-full bg-white shadow z-50">
+  <nav class="fixed w-full bg-white dark:bg-gray-900 shadow z-50">
     <div class="container mx-auto flex justify-between items-center py-4 px-6">
-      <div class="font-bold text-2xl text-purple-700">afiyatna</div>
+      <div class="font-bold text-2xl text-purple-700 dark:text-purple-400">afiyatna</div>
       <div class="space-x-6 hidden md:block">
         <a href="#home" class="hover:text-purple-600 font-medium">Home</a>
         <a href="#about" class="hover:text-purple-600 font-medium">About</a>
@@ -25,7 +27,8 @@
         <a href="#skills" class="hover:text-purple-600 font-medium">Skills</a>
         <a href="#contact" class="hover:text-purple-600 font-medium">Contact</a>
       </div>
-      <button id="menu-toggle" class="md:hidden ml-4 p-2 rounded bg-gray-200">☰</button>
+      <button id="dark-toggle" class="ml-4 p-2 rounded bg-gray-200 dark:bg-gray-700">🌙</button>
+      <button id="menu-toggle" class="md:hidden ml-4 p-2 rounded bg-gray-200 dark:bg-gray-700">☰</button>
     </div>
     <div id="mobile-menu" class="md:hidden hidden px-6 pb-4">
       <a href="#home" class="block py-2">Home</a>
@@ -37,97 +40,83 @@
     </div>
   </nav>
 
-  <!-- Home Section (Ringkasan) -->
-  <section id="home-section">
-    <div class="container mx-auto px-4 py-16">
-      <h2 class="text-2xl font-bold mb-8">Welcome</h2>
-      <div id="home-about-summary"></div>
-      <div id="home-projects-summary" class="mt-8"></div>
-      <div id="home-articles-summary" class="mt-8"></div>
-      <div id="home-skills-summary" class="mt-8"></div>
-      <div id="home-contact-summary" class="mt-8"></div>
+  <!-- Hero Section -->
+  <section id="home" class="pt-32 pb-16 container mx-auto flex flex-col md:flex-row items-center justify-between gap-8" data-aos="fade-up">
+    <div class="flex-1">
+      <p class="text-lg mb-2">Halo 👋, I'm</p>
+      <h1 class="text-4xl md:text-5xl font-bold mb-2">Afiyatna</h1>
+      <p class="text-xl text-purple-600 font-semibold mb-2">Semua tergantung mindset</p>
+      <p class="mb-6 text-gray-700 dark:text-gray-300">Web Developer</p>
+      <a href="#contact" class="btn-primary">Contact Me</a>
+      <div class="flex gap-4 mt-6">
+        <a href="#" class="flex items-center gap-2 text-gray-700 dark:text-gray-200 hover:text-purple-600"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" class="w-6 h-6"> LinkedIn</a>
+        <a href="#" class="flex items-center gap-2 text-gray-700 dark:text-gray-200 hover:text-purple-600"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" class="w-6 h-6"> GitHub</a>
+      </div>
+    </div>
+    <div class="flex-1 flex flex-col items-center relative">
+      <img src="assets/profile.jpg" alt="Foto Profil" class="w-56 h-56 object-cover rounded-2xl shadow-xl mb-4 border-4 border-white dark:border-gray-800">
     </div>
   </section>
 
-  <!-- About Section (Detail) -->
-  <section id="about-section" class="hidden">
-    <div class="container mx-auto px-4 py-16">
-      <h2 class="text-2xl font-bold mb-8">About</h2>
-      <div id="about-content-detail"></div>
-    </div>
-  </section>
-
-  <!-- Projects Section (Detail) -->
-  <section id="projects-section" class="hidden">
-    <div class="container mx-auto px-4 py-16">
+  <!-- Projects Section -->
+  <section id="projects" class="py-16 bg-gray-50 dark:bg-gray-800" data-aos="fade-up">
+    <div class="container mx-auto px-4">
       <h2 class="text-2xl font-bold mb-8">Projects</h2>
-      <div class="swiper projects-swiper-detail">
-        <div class="swiper-wrapper" id="projects-list-detail"></div>
+      <div class="swiper projects-swiper">
+        <div class="swiper-wrapper" id="projects-list"></div>
         <div class="swiper-button-next"></div>
         <div class="swiper-button-prev"></div>
       </div>
     </div>
   </section>
 
-  <!-- Articles Section (Detail) -->
-  <section id="articles-section" class="hidden">
-    <div class="container mx-auto px-4 py-16">
+  <!-- Articles Section -->
+  <section id="articles" class="py-16" data-aos="fade-up">
+    <div class="container mx-auto px-4">
       <h2 class="text-2xl font-bold mb-8">Articles</h2>
-      <div class="swiper articles-swiper-detail">
-        <div class="swiper-wrapper" id="articles-list-detail"></div>
+      <div class="swiper articles-swiper">
+        <div class="swiper-wrapper" id="articles-list"></div>
         <div class="swiper-button-next"></div>
         <div class="swiper-button-prev"></div>
       </div>
     </div>
   </section>
 
-  <!-- Skills Section (Detail) -->
-  <section id="skills-section" class="hidden">
-    <div class="container mx-auto px-4 py-16">
+  <!-- Skills Section -->
+  <section id="skills" class="py-16 bg-gray-50 dark:bg-gray-800" data-aos="fade-up">
+    <div class="container mx-auto px-4">
       <h2 class="text-2xl font-bold mb-8">Skills</h2>
-      <div id="skills-list-detail" class="grid grid-cols-2 md:grid-cols-4 gap-6"></div>
+      <div id="skills-list" class="grid grid-cols-2 md:grid-cols-4 gap-6"></div>
     </div>
   </section>
 
-  <!-- Contact Section (Detail) -->
-  <section id="contact-section" class="hidden">
-    <div class="container mx-auto px-4 py-16 flex flex-col md:flex-row gap-8">
-      <form id="contact-form-detail" class="flex-1 bg-white rounded-xl shadow p-8 space-y-4">
+  <!-- Contact Section -->
+  <section id="contact" class="py-16" data-aos="fade-up">
+    <div class="container mx-auto px-4 flex flex-col md:flex-row gap-8">
+      <form id="contact-form" class="flex-1 bg-white dark:bg-gray-900 rounded-xl shadow p-8 space-y-4">
         <h2 class="text-2xl font-bold mb-4">Contact Me</h2>
-        <input type="text" name="Nama" placeholder="Name" required class="w-full p-3 rounded border border-gray-300" />
-        <input type="email" name="Email" placeholder="Email" required class="w-full p-3 rounded border border-gray-300" />
-        <textarea name="Pesan" placeholder="Message" required class="w-full p-3 rounded border border-gray-300"></textarea>
+        <input type="text" name="Nama" placeholder="Name" required class="w-full p-3 rounded border border-gray-300 dark:bg-gray-800 dark:border-gray-600" />
+        <input type="email" name="Email" placeholder="Email" required class="w-full p-3 rounded border border-gray-300 dark:bg-gray-800 dark:border-gray-600" />
+        <textarea name="Pesan" placeholder="Message" required class="w-full p-3 rounded border border-gray-300 dark:bg-gray-800 dark:border-gray-600"></textarea>
         <button type="submit" class="w-full py-3 bg-purple-600 text-white rounded-full font-semibold hover:bg-purple-700 transition">Request Now</button>
-        <div id="form-message-detail" class="text-center mt-2"></div>
+        <div id="form-message" class="text-center mt-2"></div>
       </form>
-      <div class="flex-1 bg-white rounded-xl shadow p-8 flex flex-col items-start justify-center">
+      <div class="flex-1 bg-white dark:bg-gray-900 rounded-xl shadow p-8 flex flex-col items-start justify-center">
         <h3 class="text-xl font-bold mb-4">Connect Me</h3>
-        <a href="#" class="flex items-center gap-2 mb-2 text-gray-700 hover:text-purple-600"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" class="w-6 h-6"> LinkedIn</a>
-        <a href="#" class="flex items-center gap-2 mb-2 text-gray-700 hover:text-purple-600"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/twitter/twitter-original.svg" class="w-6 h-6"> Twitter</a>
-        <a href="#" class="flex items-center gap-2 mb-2 text-gray-700 hover:text-purple-600"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/instagram/instagram-original.svg" class="w-6 h-6"> Instagram</a>
+        <a href="#" class="flex items-center gap-2 mb-2 text-gray-700 dark:text-gray-200 hover:text-purple-600"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" class="w-6 h-6"> LinkedIn</a>
+        <a href="#" class="flex items-center gap-2 mb-2 text-gray-700 dark:text-gray-200 hover:text-purple-600"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/twitter/twitter-original.svg" class="w-6 h-6"> Twitter</a>
+        <a href="#" class="flex items-center gap-2 mb-2 text-gray-700 dark:text-gray-200 hover:text-purple-600"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/instagram/instagram-original.svg" class="w-6 h-6"> Instagram</a>
       </div>
     </div>
   </section>
 
-  <footer class="text-center py-6 text-gray-500">&copy; 2024 Afiyatna</footer>
+  <footer class="text-center py-6 text-gray-500 dark:text-gray-400">&copy; 2024 Afiyatna</footer>
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-  <script>
-    // Swiper for Projects
-    new Swiper('.projects-swiper', {
-      slidesPerView: 1,
-      spaceBetween: 24,
-      navigation: { nextEl: '.swiper-button-next', prevEl: '.swiper-button-prev' },
-      breakpoints: { 640: { slidesPerView: 2 }, 1024: { slidesPerView: 3 } }
-    });
-    // Swiper for Articles
-    new Swiper('.articles-swiper', {
-      slidesPerView: 1,
-      spaceBetween: 24,
-      navigation: { nextEl: '.swiper-button-next', prevEl: '.swiper-button-prev' },
-      breakpoints: { 640: { slidesPerView: 2 }, 1024: { slidesPerView: 3 } }
-    });
-  </script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="script.js"></script>
+  <script>
+    AOS.init({ once: true });
+  </script>
 </body>
 </html> 
