--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       <div class="space-x-6 hidden md:block">
         <a href="#home" class="hover:text-purple-600 font-medium">Home</a>
         <a href="#about" class="hover:text-purple-600 font-medium">About</a>
-        <a href="#projects" class="hover:text-purple-600 font-medium">Projects</a>
+        <a href="projects.html" class="hover:text-purple-600 font-medium">Projects</a>
         <a href="#articles" class="hover:text-purple-600 font-medium">Articles</a>
         <a href="#skills" class="hover:text-purple-600 font-medium">Skills</a>
         <a href="#contact" class="hover:text-purple-600 font-medium">Contact</a>
@@ -33,7 +33,7 @@
     <div id="mobile-menu" class="md:hidden hidden px-6 pb-4">
       <a href="#home" class="block py-2">Home</a>
       <a href="#about" class="block py-2">About</a>
-      <a href="#projects" class="block py-2">Projects</a>
+      <a href="projects.html" class="block py-2">Projects</a>
       <a href="#articles" class="block py-2">Articles</a>
       <a href="#skills" class="block py-2">Skills</a>
       <a href="#contact" class="block py-2">Contact</a>
@@ -66,6 +66,9 @@
         <div class="swiper-wrapper" id="projects-list"></div>
         <div class="swiper-button-next"></div>
         <div class="swiper-button-prev"></div>
+      </div>
+      <div class="mt-6 text-center">
+        <a href="projects.html" class="inline-block px-6 py-2 bg-purple-600 text-white rounded-full shadow hover:bg-purple-700 transition">Lihat Semua</a>
       </div>
     </div>
   </section>
