--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body { font-family: 'Inter', sans-serif; }
-    .btn-primary { @apply px-6 py-2 bg-purple-600 text-white rounded-full shadow hover:bg-purple-700 transition; }
-    .dark .btn-primary { @apply bg-gray-800 text-white hover:bg-gray-900; }
   </style>
 </head>
 <body class="bg-white text-gray-900 dark:bg-gray-900 dark:text-white transition-colors duration-300">
@@ -47,7 +45,7 @@
       <h1 class="text-4xl md:text-5xl font-bold mb-2">Afiyatna</h1>
       <p class="text-xl text-purple-600 font-semibold mb-2">Semua tergantung mindset</p>
       <p class="mb-6 text-gray-700 dark:text-gray-300">Web Developer</p>
-      <a href="#contact" class="btn-primary">Contact Me</a>
+      <a href="#contact" class="px-6 py-2 bg-purple-600 text-white rounded-full shadow hover:bg-purple-700 transition dark:bg-gray-800">Contact Me</a>
       <div class="flex gap-4 mt-6">
         <a href="#" class="flex items-center gap-2 text-gray-700 dark:text-gray-200 hover:text-purple-600"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" class="w-6 h-6"> LinkedIn</a>
         <a href="#" class="flex items-center gap-2 text-gray-700 dark:text-gray-200 hover:text-purple-600"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" class="w-6 h-6"> GitHub</a>
@@ -68,7 +66,7 @@
         <div class="swiper-button-prev"></div>
       </div>
       <div class="mt-6 text-center">
-        <a href="projects.html" class="inline-block px-6 py-2 bg-purple-600 text-white rounded-full shadow hover:bg-purple-700 transition">Lihat Semua</a>
+        <a href="projects.html" class="inline-block px-6 py-2 bg-purple-600 text-white rounded-full shadow hover:bg-purple-700 transition dark:bg-gray-800">Lihat Semua</a>
       </div>
     </div>
   </section>
