Update footer year and enhance branding by including full name in the header of index.html.

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Afiyatna N. Fauzan | Portofolio</title>
+  <title>Afiyatna | Portofolio</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
   <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
@@ -42,7 +42,7 @@
   <section id="home" class="pt-32 pb-16 container mx-auto flex flex-col md:flex-row items-center justify-between gap-8" data-aos="fade-up">
     <div class="flex-1">
       <p class="text-lg mb-2">Halo 👋, I'm</p>
-      <h1 class="text-4xl md:text-5xl font-bold mb-2">Afiyatna</h1>
+      <h1 class="text-4xl md:text-5xl font-bold mb-2">Afiyatna N. Fauzan</h1>
       <p class="text-xl text-purple-600 font-semibold mb-2">Semua tergantung mindset</p>
       <p class="mb-6 text-gray-700 dark:text-gray-300">Web Developer</p>
       <a href="#contact" class="px-6 py-2 bg-purple-600 text-white rounded-full shadow hover:bg-purple-700 transition dark:bg-gray-800">Contact Me</a>
@@ -111,7 +111,7 @@
     </div>
   </section>
 
-  <footer class="text-center py-6 text-gray-500 dark:text-gray-400">&copy; 2024 Afiyatna</footer>
+  <footer class="text-center py-6 text-gray-500 dark:text-gray-400">&copy; 2025 | Portofolio Afiyatna</footer>
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
