Update social media links in index.html to include direct URLs for LinkedIn, GitHub, Twitter, and Instagram, enhancing connectivity and user engagement.

--- a/public/index.html
+++ b/public/index.html
@@ -47,8 +47,8 @@
       <p class="mb-6 text-gray-700 dark:text-gray-300">Web Developer</p>
       <a href="#contact" class="px-6 py-2 bg-purple-600 text-white rounded-full shadow hover:bg-purple-700 transition dark:bg-gray-800">Contact Me</a>
       <div class="flex gap-4 mt-6">
-        <a href="#" class="flex items-center gap-2 text-gray-700 dark:text-gray-200 hover:text-purple-600"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" class="w-6 h-6"> LinkedIn</a>
-        <a href="#" class="flex items-center gap-2 text-gray-700 dark:text-gray-200 hover:text-purple-600"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" class="w-6 h-6"> GitHub</a>
+        <a href="https://www.linkedin.com/in/afiyatna-n-fauzan-3356a7230/" class="flex items-center gap-2 text-gray-700 dark:text-gray-200 hover:text-purple-600" target="_blank"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" class="w-6 h-6"> LinkedIn</a>
+        <a href="https://github.com/Afiyatna" class="flex items-center gap-2 text-gray-700 dark:text-gray-200 hover:text-purple-600" target="_blank"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" class="w-6 h-6"> GitHub</a>
       </div>
     </div>
     <div class="flex-1 flex flex-col items-center relative">
@@ -104,9 +104,9 @@
       </form>
       <div class="flex-1 bg-white dark:bg-gray-900 rounded-xl shadow p-8 flex flex-col items-start justify-center">
         <h3 class="text-xl font-bold mb-4">Connect Me</h3>
-        <a href="#" class="flex items-center gap-2 mb-2 text-gray-700 dark:text-gray-200 hover:text-purple-600"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" class="w-6 h-6"> LinkedIn</a>
-        <a href="#" class="flex items-center gap-2 mb-2 text-gray-700 dark:text-gray-200 hover:text-purple-600"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/twitter/twitter-original.svg" class="w-6 h-6"> Twitter</a>
-        <a href="#" class="flex items-center gap-2 mb-2 text-gray-700 dark:text-gray-200 hover:text-purple-600"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/instagram/instagram-original.svg" class="w-6 h-6"> Instagram</a>
+        <a href="https://www.linkedin.com/in/afiyatna-n-fauzan-3356a7230/" class="flex items-center gap-2 mb-2 text-gray-700 dark:text-gray-200 hover:text-purple-600" target="_blank"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" class="w-6 h-6"> LinkedIn</a>
+        <a href="https://x.com/Afiyatna_22" class="flex items-center gap-2 mb-2 text-gray-700 dark:text-gray-200 hover:text-purple-600" target="_blank"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/twitter/twitter-original.svg" class="w-6 h-6"> Twitter</a>
+        <a href="https://www.instagram.com/afiyatna_22/" class="flex items-center gap-2 mb-2 text-gray-700 dark:text-gray-200 hover:text-purple-600" target="_blank"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/instagram/instagram-original.svg" class="w-6 h-6"> Instagram</a>
       </div>
     </div>
   </section>
