--- a/public/index.html
+++ b/public/index.html
@@ -106,7 +106,20 @@
         <h3 class="text-xl font-bold mb-4">Connect Me</h3>
         <a href="https://www.linkedin.com/in/afiyatna-n-fauzan-3356a7230/" class="flex items-center gap-2 mb-2 text-gray-700 dark:text-gray-200 hover:text-purple-600" target="_blank"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" class="w-6 h-6"> LinkedIn</a>
         <a href="https://x.com/Afiyatna_22" class="flex items-center gap-2 mb-2 text-gray-700 dark:text-gray-200 hover:text-purple-600" target="_blank"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/twitter/twitter-original.svg" class="w-6 h-6"> Twitter</a>
-        <a href="https://www.instagram.com/afiyatna_22/" class="flex items-center gap-2 mb-2 text-gray-700 dark:text-gray-200 hover:text-purple-600" target="_blank"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/instagram/instagram-original.svg" class="w-6 h-6"> Instagram</a>
+        <a href="https://www.instagram.com/afiyatna_22/" class="flex items-center gap-2 mb-2 text-gray-700 dark:text-gray-200 hover:text-purple-600" target="_blank">
+          <svg class="w-6 h-6" viewBox="0 0 24 24" fill="none">
+            <defs>
+              <linearGradient id="ig-gradient" x1="0" y1="0" x2="1" y2="1">
+                <stop offset="0%" stop-color="#f58529"/>
+                <stop offset="30%" stop-color="#dd2a7b"/>
+                <stop offset="60%" stop-color="#8134af"/>
+                <stop offset="100%" stop-color="#515bd4"/>
+              </linearGradient>
+            </defs>
+            <path fill="url(#ig-gradient)" d="M7.75 2h8.5A5.75 5.75 0 0 1 22 7.75v8.5A5.75 5.75 0 0 1 16.25 22h-8.5A5.75 5.75 0 0 1 2 16.25v-8.5A5.75 5.75 0 0 1 7.75 2zm0 1.5A4.25 4.25 0 0 0 3.5 7.75v8.5A4.25 4.25 0 0 0 7.75 20.5h8.5A4.25 4.25 0 0 0 20.5 16.25v-8.5A4.25 4.25 0 0 0 16.25 3.5h-8.5zm4.25 3.25a5.25 5.25 0 1 1 0 10.5a5.25 5.25 0 0 1 0-10.5zm0 1.5a3.75 3.75 0 1 0 0 7.5a3.75 3.75 0 0 0 0-7.5zm5.13.88a1.13 1.13 0 1 1-2.26 0a1.13 1.13 0 0 1 2.26 0z"/>
+          </svg>
+          Instagram
+        </a>
       </div>
     </div>
   </section>
