--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
         <a href="#home" class="hover:text-purple-600 font-medium">Home</a>
         <a href="#about" class="hover:text-purple-600 font-medium">About</a>
         <a href="projects.html" class="hover:text-purple-600 font-medium">Projects</a>
-        <a href="#articles" class="hover:text-purple-600 font-medium">Articles</a>
+        <a href="articles.html" class="hover:text-purple-600 font-medium">Articles</a>
         <a href="#skills" class="hover:text-purple-600 font-medium">Skills</a>
         <a href="#contact" class="hover:text-purple-600 font-medium">Contact</a>
       </div>
@@ -32,7 +32,7 @@
       <a href="#home" class="block py-2">Home</a>
       <a href="#about" class="block py-2">About</a>
       <a href="projects.html" class="block py-2">Projects</a>
-      <a href="#articles" class="block py-2">Articles</a>
+      <a href="articles.html" class="block py-2">Articles</a>
       <a href="#skills" class="block py-2">Skills</a>
       <a href="#contact" class="block py-2">Contact</a>
     </div>
