Update navigation links across multiple HTML files to point directly to their respective pages, improving routing consistency and user experience.

--- a/public/home.html
+++ b/public/home.html
@@ -22,8 +22,8 @@
         <a href="about.html" class="hover:text-purple-600 font-medium">About</a>
         <a href="projects.html" class="hover:text-purple-600 font-medium">Projects</a>
         <a href="articles.html" class="hover:text-purple-600 font-medium">Articles</a>
-        <a href="index.html#skills" class="hover:text-purple-600 font-medium">Skills</a>
-        <a href="index.html#contact" class="hover:text-purple-600 font-medium">Contact</a>
+        <a href="skills.html" class="hover:text-purple-600 font-medium">Skills</a>
+        <a href="contact.html" class="hover:text-purple-600 font-medium">Contact</a>
       </div>
       <button id="dark-toggle" class="ml-4 p-2 rounded bg-gray-200 dark:bg-gray-700">🌙</button>
       <button id="menu-toggle" class="md:hidden ml-4 p-2 rounded bg-gray-200 dark:bg-gray-700">☰</button>
@@ -33,8 +33,8 @@
       <a href="about.html" class="block py-2">About</a>
       <a href="projects.html" class="block py-2">Projects</a>
       <a href="articles.html" class="block py-2">Articles</a>
-      <a href="index.html#skills" class="block py-2">Skills</a>
-      <a href="index.html#contact" class="block py-2">Contact</a>
+      <a href="skills.html" class="block py-2">Skills</a>
+      <a href="contact.html" class="block py-2">Contact</a>
     </div>
   </nav>
 
