--- a/public/articles.html
+++ b/public/articles.html
@@ -18,23 +18,23 @@
     <div class="container mx-auto flex justify-between items-center py-4 px-6">
       <div class="font-bold text-2xl text-purple-700 dark:text-purple-400">afiyatna</div>
       <div class="space-x-6 hidden md:block">
-        <a href="index.html#home" class="hover:text-purple-600 font-medium">Home</a>
-        <a href="index.html#about" class="hover:text-purple-600 font-medium">About</a>
+        <a href="home.html" class="hover:text-purple-600 font-medium">Home</a>
+        <a href="about.html" class="hover:text-purple-600 font-medium">About</a>
         <a href="projects.html" class="hover:text-purple-600 font-medium">Projects</a>
         <a href="articles.html" class="hover:text-purple-600 font-medium text-purple-600 dark:text-purple-400">Articles</a>
-        <a href="index.html#skills" class="hover:text-purple-600 font-medium">Skills</a>
-        <a href="index.html#contact" class="hover:text-purple-600 font-medium">Contact</a>
+        <a href="skills.html" class="hover:text-purple-600 font-medium">Skills</a>
+        <a href="contact.html" class="hover:text-purple-600 font-medium">Contact</a>
       </div>
       <button id="dark-toggle" class="ml-4 p-2 rounded bg-gray-200 dark:bg-gray-700">🌙</button>
       <button id="menu-toggle" class="md:hidden ml-4 p-2 rounded bg-gray-200 dark:bg-gray-700">☰</button>
     </div>
     <div id="mobile-menu" class="md:hidden hidden px-6 pb-4">
-      <a href="index.html#home" class="block py-2">Home</a>
-      <a href="index.html#about" class="block py-2">About</a>
+      <a href="home.html" class="block py-2">Home</a>
+      <a href="about.html" class="block py-2">About</a>
       <a href="projects.html" class="block py-2">Projects</a>
       <a href="articles.html" class="block py-2 text-purple-600 dark:text-purple-400">Articles</a>
-      <a href="index.html#skills" class="block py-2">Skills</a>
-      <a href="index.html#contact" class="block py-2">Contact</a>
+      <a href="skills.html" class="block py-2">Skills</a>
+      <a href="contact.html" class="block py-2">Contact</a>
     </div>
   </nav>
 
