--- a/public/projects.html
+++ b/public/projects.html
@@ -40,7 +40,7 @@
     <h2 class="text-2xl font-bold mb-8">Projects</h2>
     <div id="projects-grid" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8"></div>
   </section>
-  <footer class="text-center py-6 text-gray-500 dark:text-gray-400">&copy; 2024 Afiyatna</footer>
+  <footer class="text-center py-6 text-gray-500 dark:text-gray-400">&copy; 2025 | Portofolio Afiyatna</footer>
   <script>
     // Fetch & render projects
     fetch('https://api.sheetbest.com/sheets/6836b365-b1b6-4996-81ed-5023ea3d5ec6/tabs/Projects')
