Update contact link in home.html to direct to contact.html for improved navigation consistency.

--- a/public/home.html
+++ b/public/home.html
@@ -45,7 +45,7 @@
       <h1 class="text-4xl md:text-5xl font-bold mb-2">Afiyatna N. Fauzan</h1>
       <p class="text-xl text-purple-600 font-semibold mb-2">Semua tergantung mindset</p>
       <p class="mb-6 text-gray-700 dark:text-gray-300">Web Developer</p>
-      <a href="index.html#contact" class="px-6 py-2 bg-purple-600 text-white rounded-full shadow hover:bg-purple-700 transition dark:bg-gray-800">Contact Me</a>
+      <a href="contact.html" class="px-6 py-2 bg-purple-600 text-white rounded-full shadow hover:bg-purple-700 transition dark:bg-gray-800">Contact Me</a>
       <div class="flex gap-4 mt-6">
         <a href="https://www.linkedin.com/in/afiyatna-n-fauzan-3356a7230/" class="flex items-center gap-2 text-gray-700 dark:text-gray-200 hover:text-purple-600" target="_blank"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" class="w-6 h-6"> LinkedIn</a>
         <a href="https://github.com/Afiyatna" class="flex items-center gap-2 text-gray-700 dark:text-gray-200 hover:text-purple-600" target="_blank"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" class="w-6 h-6"> GitHub</a>
