Update navigation links in about.html to direct to skills.html and contact.html for improved routing consistency.

--- a/public/about.html
+++ b/public/about.html
@@ -56,9 +56,9 @@ profile.jpg | Afiyatna N. Fauzan | Web Developer & Tech Enthusiast | afiyatna@gm
       </div>
       <div class="flex gap-3 mb-4">
         <a id="btn-portfolio" href="projects.html" class="px-5 py-2 rounded bg-blue-500 text-white font-semibold hover:bg-blue-600 transition">Portfolio</a>
-        <a id="btn-skills" href="index.html#skills" class="px-5 py-2 rounded bg-gradient-to-r from-blue-500 to-purple-500 text-white font-semibold hover:from-blue-600 hover:to-purple-600 transition">Skills</a>
+        <a id="btn-skills" href="skills.html" class="px-5 py-2 rounded bg-gradient-to-r from-blue-500 to-purple-500 text-white font-semibold hover:from-blue-600 hover:to-purple-600 transition">Skills</a>
         <a id="btn-article" href="articles.html" class="px-5 py-2 rounded bg-blue-500 text-white font-semibold hover:bg-blue-600 transition">Article</a>
-        <a id="btn-contact" href="index.html#contact" class="px-5 py-2 rounded bg-gray-400 text-white font-semibold hover:bg-gray-500 transition">Contact</a>
+        <a id="btn-contact" href="contact.html" class="px-5 py-2 rounded bg-gray-400 text-white font-semibold hover:bg-gray-500 transition">Contact</a>
       </div>
       <div class="flex gap-4 mb-4">
         <a id="about-linkedin" href="#" target="_blank"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" class="w-7 h-7"></a>
