--- a/public/about.html
+++ b/public/about.html
@@ -45,7 +45,7 @@ profile.jpg | Afiyatna N. Fauzan | Web Developer & Tech Enthusiast | afiyatna@gm
 
   <section class="pt-32 pb-8 container mx-auto px-4 flex flex-col md:flex-row items-center gap-12" data-aos="fade-up" id="about-main">
     <div class="flex-1 flex justify-center">
-      <img id="about-photo" src="assets/profile.jpg" alt="Foto Profil" class="w-64 h-72 object-cover rounded-2xl shadow-xl border-4 border-white dark:border-gray-800">
+        <img src="assets/profile.jpg" alt="Foto Profil" class="w-56 h-66 object-cover rounded-2xl shadow-xl mb-4 border-4 border-white dark:border-gray-800">
     </div>
     <div class="flex-1 flex flex-col items-start md:items-start">
       <h1 id="about-nama" class="text-4xl md:text-5xl font-bold mb-2">Nama</h1>
