--- a/public/home.html
+++ b/public/home.html
@@ -58,7 +58,7 @@
 
   <!-- Portfolios Section -->
   <section class="container mx-auto px-4 pb-16" data-aos="fade-up">
-    <h2 class="text-2xl font-bold mb-6">Portfolios</h2>
+    <h2 class="text-2xl font-bold mb-6">Project</h2>
     <div class="swiper portfolios-swiper">
       <div class="swiper-wrapper" id="home-projects-list"></div>
       <div class="swiper-button-next"></div>
