--- a/public/contact.html
+++ b/public/contact.html
@@ -38,13 +38,11 @@
   </nav>
 
   <section class="pt-32 pb-16 container mx-auto px-4 flex flex-col md:flex-row gap-8" data-aos="fade-up">
-    <form id="contact-form" class="flex-1 bg-white dark:bg-gray-900 rounded-xl shadow p-8 space-y-4">
-      <h2 class="text-2xl font-bold mb-4">Contact Me</h2>
-      <input type="text" name="Nama" placeholder="Name" required class="w-full p-3 rounded border border-gray-300 dark:bg-gray-800 dark:border-gray-600" />
-      <input type="email" name="Email" placeholder="Email" required class="w-full p-3 rounded border border-gray-300 dark:bg-gray-800 dark:border-gray-600" />
-      <textarea name="Pesan" placeholder="Message" required class="w-full p-3 rounded border border-gray-300 dark:bg-gray-800 dark:border-gray-600"></textarea>
-      <button type="submit" class="w-full py-3 bg-purple-600 text-white rounded-full font-semibold hover:bg-purple-700 transition">Request Now</button>
-      <div id="form-message" class="text-center mt-2"></div>
+    <form action="https://formsubmit.co/afiyatna99@gmail.com" method="POST" class="space-y-4" id="contact-form">
+      <input type="text" name="name" required placeholder="Nama" class="w-full px-4 py-2 rounded border border-gray-300 dark:bg-gray-800 dark:text-white" />
+      <input type="email" name="email" required placeholder="Email" class="w-full px-4 py-2 rounded border border-gray-300 dark:bg-gray-800 dark:text-white" />
+      <textarea name="message" required placeholder="Pesan" class="w-full px-4 py-2 rounded border border-gray-300 dark:bg-gray-800 dark:text-white"></textarea>
+      <button type="submit" class="w-full bg-purple-600 text-white py-2 rounded hover:bg-purple-700 transition">Send</button>
     </form>
     <div class="flex-1 bg-white dark:bg-gray-900 rounded-xl shadow p-8 flex flex-col items-start justify-center">
       <h3 class="text-xl font-bold mb-4">Connect Me</h3>
@@ -83,19 +81,6 @@
     document.getElementById('menu-toggle').onclick = () => {
       document.getElementById('mobile-menu').classList.toggle('hidden');
     };
-    // Form submit
-    document.getElementById('contact-form').onsubmit = async function(e) {
-      e.preventDefault();
-      const form = e.target;
-      const data = Object.fromEntries(new FormData(form).entries());
-      const res = await fetch('https://api.sheetbest.com/sheets/6836b365-b1b6-4996-81ed-5023ea3d5ec6/tabs/Contact', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify(data)
-      });
-      document.getElementById('form-message').textContent = res.ok ? 'Pesan terkirim!' : 'Gagal mengirim pesan.';
-      form.reset();
-    }
   </script>
 </body>
 </html> 
