Update navigation links across multiple HTML files to point to index.html instead of home.html, enhancing routing consistency and user experience.

--- a/public/about.html
+++ b/public/about.html
@@ -23,7 +23,7 @@ profile.jpg | Afiyatna N. Fauzan | Web Developer & Tech Enthusiast | afiyatna@gm
     <div class="container mx-auto flex justify-between items-center py-4 px-6">
       <div class="font-bold text-2xl text-purple-700 dark:text-purple-400">afiyatna</div>
       <div class="space-x-6 hidden md:block">
-        <a href="home.html" class="hover:text-purple-600 font-medium">Home</a>
+        <a href="index.html" class="hover:text-purple-600 font-medium">Home</a>
         <a href="about.html" class="hover:text-purple-600 font-medium text-purple-600 dark:text-purple-400">About</a>
         <a href="projects.html" class="hover:text-purple-600 font-medium">Projects</a>
         <a href="articles.html" class="hover:text-purple-600 font-medium">Articles</a>
@@ -34,7 +34,7 @@ profile.jpg | Afiyatna N. Fauzan | Web Developer & Tech Enthusiast | afiyatna@gm
       <button id="menu-toggle" class="md:hidden ml-4 p-2 rounded bg-gray-200 dark:bg-gray-700">☰</button>
     </div>
     <div id="mobile-menu" class="md:hidden hidden px-6 pb-4">
-      <a href="home.html" class="block py-2">Home</a>
+      <a href="index.html" class="block py-2">Home</a>
       <a href="about.html" class="block py-2 text-purple-600 dark:text-purple-400">About</a>
       <a href="projects.html" class="block py-2">Projects</a>
       <a href="articles.html" class="block py-2">Articles</a>
